--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ body {
 .about {
     padding: 4rem 1rem;
     text-align: center;
-    background: url('assets/images/pexels-pixabay-267350.jpg') center/cover fixed;
+    background: url('assets/images/pexels-pixabay-267350 (2).jpg') center/cover fixed;
     position: relative;
 }
 
