--- a/style.css
+++ b/style.css
@@ -479,14 +479,13 @@ body {
 }
 
 .service-hero-content h1 span {
-    color: var(--mobile_accent);
+    color: var(--global_main_color);
 }
 
 .service-hero-content p {
     font-size: clamp(1rem, 2vw, 1.2rem);
     color: #fff;
     margin-bottom: 2rem;
-}
 
 .btn {
     display: inline-block;
